[gd_scene load_steps=6 format=3 uid="uid://cacujn1fymrst"]

[ext_resource type="Texture2D" uid="uid://0u5b6u4w1rfu" path="res://assets/enemies/slime.png" id="1_bi7ni"]
[ext_resource type="Script" uid="uid://ubf8ej16x56y" path="res://src/enemies/slimes.gd" id="1_wxtys"]
[ext_resource type="Texture2D" uid="uid://dbnahn7owiro" path="res://assets/temporary/target-marker.png" id="3_hlhrs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bi7ni"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_hlhrs"]
radius = 256.0

[node name="Slimes" type="CharacterBody2D"]
script = ExtResource("1_wxtys")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_bi7ni")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bi7ni")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_hlhrs")

[node name="Target" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_hlhrs")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
